Fix for flickering swipeable area in Safari/iOS <=12
SRFCMSAL-3029

--- a/source/_patterns/_shame.scss
+++ b/source/_patterns/_shame.scss
@@ -502,3 +502,17 @@ main {
     }
   }
 }
+
+/*
+ * TARGETED BROWSER: Safari Mobile in iOS 12 and below
+ * Our implementation of the swipeable-area causes Safari in iOS <=12
+ * curiously to flicker when scrolling. Probably this is specifically
+ * a bug in WebKit in re-painting an element (nav-arrows) on top of an
+ * element that has the scroll snapping behaviour.
+ */
+
+@supports (hover: none) and (prefers-color-scheme: dark) {
+  .swipeable-area__wrapper {
+    scroll-snap-type: none;
+  }
+}
